# QuantumSynth

./: .gitignore  CMakeLists.txt  README.md
.claude/: settings.json
.claude/skills/run-quantumsynth/: SKILL.md
Molecules/Benzene/: Benzene 2.itp
Molecules/CO2/: CO2.gro  CO2.itp
Molecules/Ethane/: ethane.gro  ethane.itp
Molecules/RNA/: RNA.gro  RNA.itp  RNA.itp.bak  out.itp
Source/: Forces.h  GroParser.h  Integrator.h  ItpParser.h  MoleculaLookAndFeel.h  Molecule.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SoundSynth.h
Test/: CO2.itp  benzene.gro  benzene.itp  benzene_custom.itp  read_itp.cpp  test_angles.cpp  test_forces.cpp  test_gro.cpp  test_integrator.cpp  test_itp.cpp  test_sound.cpp
